Closed Bug 1292281 Opened 8 years ago Closed 8 years ago

Stylo Assertion failure: mSource.IsGeckoRuleNode(), at layout/style/nsStyleContext.h:325

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: cpeterson, Assigned: emilio)

References

Details

(Keywords: assertion, Whiteboard: [stylo:m2])

Attachments

(2 files, 1 obsolete file)

To reproduce, run `./mach reftest --disable-e10s <filename>` or replace <filename> with `layout/reftest/reftest.list`.

TEST-UNEXPECTED-FAIL | file:///home/shinglyu/workspace/stylo/gecko-dev/layout/reftests/selection/pseudo-element-of-native-anonymous.html | application terminated with exit code 11
REFTEST PROCESS-CRASH | file:///home/shinglyu/workspace/stylo/gecko-dev/layout/reftests/selection/pseudo-element-of-native-anonymous.html | application crashed [None]

Assertion failure: mSource.IsGeckoRuleNode(), at /files/mozilla/stylo/bb/gecko/layout/style/nsStyleContext.h:325
This boils down to a call to nsRuleNode::HasAuthorSpecifiedValues while looking for the selection style in nsTextFrame.cpp.

I have a patch to move the error we raise in the PresShell to nsRuleNode.
This function, btw, explains why I thought we were missing pseudo-elements.

Returning true here unconditionally makes us not style the element with the native style, which makes it look raw when no styles are used.
Assignee: nobody → ecoal95
Status: NEW → ASSIGNED
Attachment #8785003 - Flags: review?(bobbyholley)
See Also: → 1296149
The commit message said nsPresShell instead of nsPresContext, sorry.
Attachment #8785003 - Attachment is obsolete: true
Attachment #8785003 - Flags: review?(bobbyholley)
Attachment #8785014 - Flags: review?(bobbyholley)
Nobody ever overrides it.
Attachment #8785015 - Flags: review?(bobbyholley)
Attachment #8785015 - Flags: review?(bobbyholley) → review+
Attachment #8785014 - Flags: review?(bobbyholley) → review+
Pushed by ecoal95@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/9f9fc14a57c1
Convert the error from nsPresContext::HasAuthorSpecifiedRules in a warning in nsRuleNode. r=bholley
https://hg.mozilla.org/integration/mozilla-inbound/rev/0d599bb5b2dd
Devirtualize nsPresContext::HasAuthorSpecifiedRules. r=bholley
https://hg.mozilla.org/mozilla-central/rev/9f9fc14a57c1
https://hg.mozilla.org/mozilla-central/rev/0d599bb5b2dd
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: