Bug 1292281: Convert the error from nsPresContext::HasAuthorSpecifiedRules in a warning in nsRuleNode. r=bholley

MozReview-Commit-ID: 7ue0MYP3Jdb
Signed-off-by: Emilio Cobos Álvarez <ecoal95@gmail.com>